--- a/flappybird.html
+++ b/flappybird.html
@@ -9,8 +9,8 @@
   </head>
   
   <body>
-    <h1>PUT YOUR TITLE HERE</h1>
-    <p>ADD DESCRIPTION HERE</p>
+    <h1>Flappy Bird</h1>
+    <p>A processing project made with adam and i.</p>
     
     <script type="text/processing">
     
