--- a/flapbird.html
+++ b/flapbird.html
@@ -192,9 +192,9 @@ private void addscore(IntList xpos, int x, int barrY,int step){
 
 
 public class Barry{
-  public PImage A;
+  //public PImage A;
   void setup() {
-    A = loadImage("./Images/R.PNG");
+   // A = loadImage("./Images/R.PNG");
   }
   
   void update(int x, int y) {
